# Personal-Website-PW

./: .gitignore  .replit  LICENSE  README.md  links.md  main.py  md.md  pyproject.toml  robots.txt
static/css/: calc.css  chatcss.css  contact.css  style.css
static/js/: calc.js  movecard.js  schoolchat.js  schoolscript.js  timescript.js
templates/: about.html  calculator.html  contact.html  index.html  projects.html  succes.html  what_is_this.html
templates/contact/: contact.html  failed.html  succes.html
templates/errors/: 404.html  418.html  500.html  shortenernotfound.html
templates/games/: games-questionmark.html
templates/school/: calculator.html  chat.html  schoolindex.html
templates/shortener/: ids.txt  lengthener.html  qrcodemaker.html  redirectdashboard.html  redirecthome.html
