[tool.poetry]
name = "PW - Personal Website"
version = "1.0.0"
description = "Personal website of Raadsel using Flask"
authors = ["Raadsel - Jorik.loos@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.1.2"
waitress = "^2.1.2"
Flask-Limiter = "^2.6.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"